minor bug fixes and UI changes + routing
